# oso

./: pyproject.toml  setup.py
languages/python/oso/: .pypirc  pyproject.toml  setup.py
languages/python/oso/build_scripts/: cffi_build.py  hatch_build.py
languages/python/oso/oso/: oso.py
languages/python/oso/polar/: build.py
