[project]
name = "oso"
version = "0.28.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi~=1.15",
]


[dependency-groups]
dev = [
    "setuptools>=80",
    "twine"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
